@@ -2,6 +2,9 @@ Changes in mirt 0.5.2
 
 NEW FEATURES
 
+- multipleGroup(invariance = '') can include item names to specify which items are to
+  be considered invariant accross groups. Useful for anchoring and DIF testing
+
 - type = 'trace' option added to plot() to display all item trace lines on a single 
   graph (dichotomous items only)
 
